Ticket #1983: fix search field overlap.

--- a/sites/all/themes/doit/sass/partials/07-layout-design/general/_utility-bar.sass
+++ b/sites/all/themes/doit/sass/partials/07-layout-design/general/_utility-bar.sass
@@ -45,6 +45,9 @@
     .form-item-keys-1
       margin-left: 1.5em
       margin-right: 1.5em
+      .ie8 &
+        margin-left: 40px
+        margin-right: 20px
     .login,
     #help-center
       a
